Bug 406597 - Latte dock does not match themes panel colors in !compositing mode
Summary: Latte dock does not match themes panel colors in !compositing mode
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-16 13:20 UTC by gregorystarr00
Modified: 2019-04-16 20:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Picture of Latte-Dock settings (51.75 KB, image/png)
2019-04-16 15:50 UTC, gregorystarr00
Details
Displaying the bug (75.55 KB, image/png)
2019-04-16 15:56 UTC, gregorystarr00
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gregorystarr00 2019-04-16 13:20:40 UTC
SUMMARY

When using the Numix theme (or most themes) KDE panels are the color specified by the theme. However, the Latte dock panel is a lighter, different color.

STEPS TO REPRODUCE
1. Use numix theme
2. Open Latte Dock
3. Open a KDE panel

OBSERVED RESULT
Same color

EXPECTED RESULT
Different color

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2019-04-16 15:17:07 UTC
1. Screenshots with your Appearance settings please
2. What is your distro?
Comment 2 Michail Vourlakos 2019-04-16 15:17:12 UTC
1. Screenshots with your Appearance settings please
2. What is your distro?
Comment 3 gregorystarr00 2019-04-16 15:43:24 UTC
(In reply to Michail Vourlakos from comment #2)
> 1. Screenshots with your Appearance settings please
> 2. What is your distro?

1: I cannot take a screenshot as opening Spectacle closes the latte-dock menu

2: Kubuntu 18.10
Comment 4 Michail Vourlakos 2019-04-16 15:48:58 UTC
(In reply to gregorystarr00 from comment #3)
> (In reply to Michail Vourlakos from comment #2)
> > 1. Screenshots with your Appearance settings please
> > 2. What is your distro?
> 
> 1: I cannot take a screenshot as opening Spectacle closes the latte-dock menu
> 

at the top-right corner of the settings window there is a stick button
Comment 5 gregorystarr00 2019-04-16 15:50:53 UTC
Created attachment 119438 [details]
Picture of Latte-Dock settings
Comment 6 gregorystarr00 2019-04-16 15:51:10 UTC
(In reply to Michail Vourlakos from comment #4)
> (In reply to gregorystarr00 from comment #3)
> > (In reply to Michail Vourlakos from comment #2)
> > > 1. Screenshots with your Appearance settings please
> > > 2. What is your distro?
> > 
> > 1: I cannot take a screenshot as opening Spectacle closes the latte-dock menu
> > 
> 
> at the top-right corner of the settings window there is a stick button

Took screenshot
Comment 7 gregorystarr00 2019-04-16 15:51:32 UTC
(In reply to Michail Vourlakos from comment #4)
> (In reply to gregorystarr00 from comment #3)
> > (In reply to Michail Vourlakos from comment #2)
> > > 1. Screenshots with your Appearance settings please
> > > 2. What is your distro?
> > 
> > 1: I cannot take a screenshot as opening Spectacle closes the latte-dock menu
> > 
> 
> at the top-right corner of the settings window there is a stick button

Note, the compositor is disabled as my computer is incredibly weak
Comment 8 Michail Vourlakos 2019-04-16 15:55:08 UTC
Ok, now show me a screenshot of Latte demonstrating wrong colors and a plasma panel with the correct one
Comment 9 gregorystarr00 2019-04-16 15:56:53 UTC
Created attachment 119439 [details]
Displaying the bug
Comment 10 gregorystarr00 2019-04-16 15:57:10 UTC
(In reply to Michail Vourlakos from comment #8)
> Ok, now show me a screenshot of Latte demonstrating wrong colors and a
> plasma panel with the correct one

Top panel is plasma, bottom one is latte
Comment 11 Michail Vourlakos 2019-04-16 16:17:36 UTC
(In reply to gregorystarr00 from comment #10)
> (In reply to Michail Vourlakos from comment #8)
> > Ok, now show me a screenshot of Latte demonstrating wrong colors and a
> > plasma panel with the correct one
> 
> Top panel is plasma, bottom one is latte

move latte at the left edge and the top plasma panel at the bottom. Dont the plasma panel change to the previous Latte look?
Comment 12 gregorystarr00 2019-04-16 18:16:06 UTC
No, no change.
Comment 13 Michail Vourlakos 2019-04-16 18:18:26 UTC
(In reply to gregorystarr00 from comment #12)
> No, no change.

1. what is your plasma theme ?
2. If you change plasma theme, the same thing happens?
Comment 14 gregorystarr00 2019-04-16 18:25:01 UTC
(In reply to Michail Vourlakos from comment #13)
> (In reply to gregorystarr00 from comment #12)
> > No, no change.
> 
> 1. what is your plasma theme ?
> 2. If you change plasma theme, the same thing happens?

Numix, and yes
Comment 15 Michail Vourlakos 2019-04-16 18:30:02 UTC
(In reply to gregorystarr00 from comment #14)
> (In reply to Michail Vourlakos from comment #13)
> > (In reply to gregorystarr00 from comment #12)
> > > No, no change.
> > 
> > 1. what is your plasma theme ?
> > 2. If you change plasma theme, the same thing happens?
> 
> Numix, and yes

I cant reproduce in my system
Comment 16 gregorystarr00 2019-04-16 19:35:20 UTC
(In reply to Michail Vourlakos from comment #15)
> (In reply to gregorystarr00 from comment #14)
> > (In reply to Michail Vourlakos from comment #13)
> > > (In reply to gregorystarr00 from comment #12)
> > > > No, no change.
> > > 
> > > 1. what is your plasma theme ?
> > > 2. If you change plasma theme, the same thing happens?
> > 
> > Numix, and yes
> 
> I cant reproduce in my system

More accurately, the color of both of the panels do change when theme is changed, but they are often different
Comment 17 Michail Vourlakos 2019-04-16 19:56:34 UTC
(In reply to gregorystarr00 from comment #16)
> (In reply to Michail Vourlakos from comment #15)
> > (In reply to gregorystarr00 from comment #14)
> > > (In reply to Michail Vourlakos from comment #13)
> > > > (In reply to gregorystarr00 from comment #12)
> > > > > No, no change.
> > > > 
> > > > 1. what is your plasma theme ?
> > > > 2. If you change plasma theme, the same thing happens?
> > > 
> > > Numix, and yes
> > 
> > I cant reproduce in my system
> 
> More accurately, the color of both of the panels do change when theme is
> changed, but they are often different

1. Are we always talking about !compositing mode?
2. I installed Numix theme and in Plasma 5.15 they look the same!
3. This is probably Plasma 5.12 inconsistency, in my Plasma 5.15 the colors are the same in !compositing mode both for Plasma and Latte except the border
Comment 18 Michail Vourlakos 2019-04-16 20:10:25 UTC
forget my comments...
you are right...
in !compositing mode Latte and plasma panels dont use the same svg file!

I will make a fix for master version but I dont know if it will be possible to fix this in stable v0.8 version
Comment 19 Michail Vourlakos 2019-04-16 20:56:11 UTC
Git commit 499c4eb1d13cea85e29ff08870f0fca151ef360c by Michail Vourlakos.
Committed on 16/04/2019 at 20:55.
Pushed by mvourlakos into branch 'master'.

update !compositing panelbackground used until now

--following plasma approach and use always
even for !compositing mode the widgets/panel-background
svg file. This way when Latte and Plasma panels are
combined there is uniformity between them.

M  +4    -50   app/plasma/extended/theme.cpp
M  +0    -6    app/plasma/extended/theme.h
M  +20   -3    app/view/effects.cpp
M  +2    -0    app/view/effects.h
M  +1    -1    containment/package/contents/ui/PanelBox.qml
M  +6    -0    containment/package/contents/ui/VisibilityManager.qml
R  +0    -0    containment/package/contents/ui/layouts/LayoutsContainer.qml [from: containment/package/contents/ui/layouts/Container.qml - 100% similarity]
M  +1    -1    containment/package/contents/ui/main.qml

https://commits.kde.org/latte-dock/499c4eb1d13cea85e29ff08870f0fca151ef360c